# RandomChatServer

./: CMakeLists.txt  Dockerfile  Readme.md  rooms.rc
Documentation/: RandomChatDiagrams.mdj  RandomChat_statechart.mdj
src/: CMakeLists.txt  Calculator.c  Calculator.h  server.c  server.h  serverMain.c
src/FileManagement/: fileManager.c  fileManager.h
src/Finder/: connection.c  connection.h  finder.c  finder.h
src/Timer/: timer.c  timer.h
src/datastructures/: queue.c  queue.h  vector.c  vector.h
src/datastructures/entity/: room.c  room.h  user.h
tests/: CMakeLists.txt  test.c
tests/datastructures/: queueTest.c  vectorTest.c
